--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -2,7 +2,11 @@
 
 = 追加情報 =
 
- * 次の理由から mencoder.exe(rev33883) と mencoder2.exe(rev35224) を配布しております。なお、配布している mencoder.exe では CSS を解除できません。
-  # Mencoder の最新ビルドでは、当方で試す限り、mpg(mpeg2+AC3) へのエンコード時に音ずれが発生する場合があります。rev33883 ではその症状は発生しなません。なお、-vf オプションから harddup を外すか、fixpts を加える（-vf fixpts,harddup とする）か、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると最新版での音ずれは少なくなるようです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っていますが。
-  # Mencoder の最新ビルドでは、当方で試す限り、mpg(mpeg2+AC3) へのエンコード時に音声がただのノイズになるという症状が発生する場合があります。Paehl Build rev35224 や Subjunk Build 45 や Panasony Build であればその症状は発生しません。なお、ノイズにより再生機器や視聴者に障害が生じる恐れがありますので mencoder.exe を入れ替える方は注意してください。
+ * 次の理由から Mencoder は最新ビルドではなく、mencoder.exe (rev33883) と mencoder2.exe(rev35224) を配布しております。<br>なお、配布している mencoder.exe では CSS を解除できません。
+  # Mencoder の最新ビルドでは、当方で試す限り、mpg(mpeg2+AC3) へのエンコード時に音ずれが発生する場合があります。rev33883 ではその症状は発生しなません。<br>なお、-vf オプションから harddup を外すか、fixpts を加える（-vf fixpts,harddup とする）か、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると最新版での音ずれは少なくなるようです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っています。
+  # Mencoder の最新ビルドでは、当方で試す限り、mpg(mpeg2+AC3) へのエンコード時に音声がただのノイズになるという症状が発生する場合があります。Paehl Build rev35224 や Subjunk Build 45 や Panasony Build であればその症状は発生しません。<br>なお、ノイズにより再生機器や視聴者に障害が生じる恐れがありますので mencoder.exe を入れ替える方は注意してください。
   # Subjunk Build 45 や Panasony Build では、当方で試す限り、mp4 へのエンコード時に音ずれが発生する場合があります。Paehl Build rev35224 ではその症状は発生しません。
+
+ * [MP4] - MP4 のストリーミング再生について。
+
+ * ビットレートが高い動画をカクカクさせずに再生させるためには、当然それなりのPC環境が必要になります。例えば 20Mbのビットレートの動画をストリーミング再生するためには、1秒間に20Mb以上読み込めるHDDと、1秒間に20Mb以上の速度で転送できるネットワーク環境が必要であるのは当然です。仮に平時にはその要件が満たされていたとしても、裏でウィルスチェックソフトや自動バックアップソフトなどが動作したために、それらの要件が確保できなくなる可能性もあります。特に、同一のHDDに頻繁にアクセスするソフトが競合すると、速度低下が顕著になるようです（動画再生の際にBMSがファイルをロックするようにすると若干読み出し速度が上がる可能性があるのですが、そうすると逆に他のソフトからのアクセスが遅くなる可能性があるためロックしないようにしています）。なお、動画のビットレートは付属の MI.exe で調査できます。
