Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -6,7 +6,7 @@
   # Mencoder の最新ビルド（2012/12/12現在）では、当方で試す限り、mpg(mpeg2+AC3) へのエンコード時に音ずれが発生する場合があります。rev33883 ではその症状は発生しません。
    * -vf オプションから harddup を外すか、fixpts を加える（-vf fixpts,harddup とする）か、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると最新ビルドでも音ずれは少なくなるようです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っています。
   # Mencoder の最新ビルドでは、当方で試す限り、mpg(mpeg2+AC3) へのエンコード時に音声がただのノイズになるという症状が発生する場合があります。Paehl Build rev35224 や Subjunk Build 45 や Panasony Build(from PMS for VIERA 1.63.0) であればその症状は発生しません。<br>なお、ノイズにより再生機器や視聴者に障害が生じる恐れがありますので mencoder.exe を入れ替える方は注意してください。
-   * Mencoder の rev35224 をビルドしてみても ffmpeg(lavc) の最新ビルドとリンクする限り症状が発生しますので、ffmpeg との整合性の点で問題があるような感じです。
+   * Mencoder の rev35224 をビルドしてみても ffmpeg(lavc) の最新ビルドとリンクする限り症状が発生しますので、ffmpeg との整合性の点で問題があるような感じです。どうも ffmpeg rev 79d303 より後で仕様が変更されたのが原因ぽいです。
    * -lavcopts 内の acodec=ac3 という部分を acodec=ac3_fixed とすれば少しましにはなることは確認してますが・・・
   # Subjunk Build 45 や Panasony Build(from PMS for VIERA 1.63.0) では、当方で試す限り、mp4 へのエンコード時に音ずれが発生する場合があります。Paehl Build rev35224 ではその症状は発生しません。
 
