Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -12,4 +12,6 @@
 
  * ビットレートが高い動画をカクカクさせずに再生させるためには、当然それなりのPC環境が必要になります。例えば 20Mbのビットレートの動画をストリーミング再生するためには、1秒間に20Mb以上読み込めるHDDと、1秒間に20Mb以上の速度で転送できるネットワーク環境が必要であるのは当然です。仮に平時にはその要件が満たされていたとしても、裏でウィルスチェックソフトや自動バックアップソフトなどが動作したために、それらの要件が確保できなくなる可能性もあります。特に、同一のHDDに頻繁にアクセスするソフトが競合すると、速度低下が顕著になるようです（動画再生の際にBMSがファイルをロックするようにすると若干読み出し速度が上がる可能性があるのですが、そうすると逆に他のソフトからのアクセスが遅くなる可能性があるためロックしないようにしています）。なお、動画のビットレートは付属の MI.exe で調査できます。
 
- * Mediainfo.dll で情報取得すると Mediainfo.dll がハングアップしてしまい、ひいては bms.exe もハングアップしてしまうメディアファイルが存在するようです。<br>解決方法はそのメディアファイルを取り除くしかありません。問題となっているメディアファイルでは MI.exe もハングアップしてしまうはずですので、 MI.exe を使って探すと良いかもしれません。。
+ * Mediainfo.dll で情報取得すると Mediainfo.dll がハングアップしてしまい、ひいては bms.exe もハングアップしてしまうメディアファイルが存在するようです。<br>解決方法はそのメディアファイルを取り除くしかありません。問題となっているメディアファイルでは MI.exe もハングアップしてしまうはずですので、 MI.exe を使って探すと良いかもしれません。
+
+ * ルーターの無線LANの設定で、Snooping という機能を ON にすると、DLNAサーバーが見つからなくなる場合があるようです。
