Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -14,4 +14,4 @@
 
  * Mediainfo.dll で情報取得すると Mediainfo.dll がハングアップしてしまい、ひいては bms.exe もハングアップしてしまうメディアファイルが存在するようです。<br>解決方法はそのメディアファイルを取り除くしかありません。問題となっているメディアファイルでは MI.exe もハングアップしてしまうはずですので、 MI.exe を使って探すと良いかもしれません。
 
- * ルーターの無線LANの設定で、Snooping という機能を ON にすると、DLNAサーバーが見つからなくなる場合があるようです。
+ * ルーターの無線LANの設定で、Snooping という機能を ON にすると、無線LANで接続されているクライアントから DLNAサーバーが見つけられなくなる場合があるようです。
